<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cap_grant_ld</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="edgelord@todo.todo">edgelord</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libprocps-dev</depend>
  <depend>libcap-ng-dev</depend>

  <!--
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
  -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
