<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cap_alias</name>
  <version>0.0.0</version>
  <description>cap_grant_ld ROS2 library comsumption demo</description>
  <maintainer email="edgelord@todo.todo">edgelord</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cap_grant_ld</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
